; ModuleID = '/home/carl/AnghaBench/RetroArch/gfx/include/userland/containers/test/extr_crc_32.c_crc32file.c'
source_filename = "/home/carl/AnghaBench/RetroArch/gfx/include/userland/containers/test/extr_crc_32.c_crc32file.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [2 x i8] c"r\00", align 1
@Error_ = common dso_local global i32 0, align 4
@EOF = common dso_local global i32 0, align 4
@Success_ = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @crc32file(i8* %0, i32* %1, i64* %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i8*, align 8
  %6 = alloca i32*, align 8
  %7 = alloca i64*, align 8
  %8 = alloca i32*, align 8
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  store i8* %0, i8** %5, align 8
  store i32* %1, i32** %6, align 8
  store i64* %2, i64** %7, align 8
  store i32 -1, i32* %9, align 4
  %11 = load i64*, i64** %7, align 8
  store i64 0, i64* %11, align 8
  %12 = load i8*, i8** %5, align 8
  %13 = call i32* @fopen(i8* %12, i8* getelementptr inbounds ([2 x i8], [2 x i8]* @.str, i64 0, i64 0))
  store i32* %13, i32** %8, align 8
  %14 = icmp eq i32* %13, null
  br i1 %14, label %15, label %19

15:                                               ; preds = %3
  %16 = load i8*, i8** %5, align 8
  %17 = call i32 @perror(i8* %16)
  %18 = load i32, i32* @Error_, align 4
  store i32 %18, i32* %4, align 4
  br label %47

19:                                               ; preds = %3
  br label %20

20:                                               ; preds = %25, %19
  %21 = load i32*, i32** %8, align 8
  %22 = call i32 @getc(i32* %21)
  store i32 %22, i32* %10, align 4
  %23 = load i32, i32* @EOF, align 4
  %24 = icmp ne i32 %22, %23
  br i1 %24, label %25, label %32

25:                                               ; preds = %20
  %26 = load i64*, i64** %7, align 8
  %27 = load i64, i64* %26, align 8
  %28 = add nsw i64 %27, 1
  store i64 %28, i64* %26, align 8
  %29 = load i32, i32* %10, align 4
  %30 = load i32, i32* %9, align 4
  %31 = call i32 @UPDC32(i32 %29, i32 %30)
  store i32 %31, i32* %9, align 4
  br label %20

32:                                               ; preds = %20
  %33 = load i32*, i32** %8, align 8
  %34 = call i64 @ferror(i32* %33)
  %35 = icmp ne i64 %34, 0
  br i1 %35, label %36, label %40

36:                                               ; preds = %32
  %37 = load i8*, i8** %5, align 8
  %38 = call i32 @perror(i8* %37)
  %39 = load i64*, i64** %7, align 8
  store i64 -1, i64* %39, align 8
  br label %40

40:                                               ; preds = %36, %32
  %41 = load i32*, i32** %8, align 8
  %42 = call i32 @fclose(i32* %41)
  %43 = load i32, i32* %9, align 4
  %44 = xor i32 %43, -1
  store i32 %44, i32* %9, align 4
  %45 = load i32*, i32** %6, align 8
  store i32 %44, i32* %45, align 4
  %46 = load i32, i32* @Success_, align 4
  store i32 %46, i32* %4, align 4
  br label %47

47:                                               ; preds = %40, %15
  %48 = load i32, i32* %4, align 4
  ret i32 %48
}

declare dso_local i32* @fopen(i8*, i8*) #1

declare dso_local i32 @perror(i8*) #1

declare dso_local i32 @getc(i32*) #1

declare dso_local i32 @UPDC32(i32, i32) #1

declare dso_local i64 @ferror(i32*) #1

declare dso_local i32 @fclose(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
